Creada "main activity", con imagebuttons para acceder a la consulta (y edicion individual) y para el proceso batch. También un botón de logout. Estos dos últimos, pendientes de implementar.

--- a/dedicaMNS/AndroidManifest.xml
+++ b/dedicaMNS/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name=".DetailDayActivity"
             android:label="@string/title_activity_detail_day" >
         </activity>
+        <activity
+            android:name=".MainMenuActivity"
+            android:label="@string/title_activity_main_menu" >            
+        </activity>
     </application>
 
 </manifest>
