--- a/dedicaMNS/AndroidManifest.xml
+++ b/dedicaMNS/AndroidManifest.xml
@@ -29,7 +29,11 @@
         </activity>
         <activity
             android:name=".MainMenuActivity"
-            android:label="@string/title_activity_main_menu" >            
+            android:label="@string/title_activity_main_menu" >
+        </activity>
+        <activity
+            android:name=".BatchMenuActivity"
+            android:label="@string/title_activity_batch_menu" >
         </activity>
     </application>
 
