--- a/dedicaMNS/AndroidManifest.xml
+++ b/dedicaMNS/AndroidManifest.xml
@@ -1,21 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.edwise.dedicamns"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.9" >
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".LoginActivity"
+            android:name="com.edwise.dedicamns.LoginActivity"
             android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,19 +26,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MonthViewActivity"
+            android:name="com.edwise.dedicamns.MonthViewActivity"
             android:label="@string/title_activity_month_view" />
         <activity
-            android:name=".DetailDayActivity"
+            android:name="com.edwise.dedicamns.DetailDayActivity"
             android:label="@string/title_activity_detail_day" >
         </activity>
         <activity
-            android:name=".MainMenuActivity"
+            android:name="com.edwise.dedicamns.MainMenuActivity"
             android:label="@string/title_activity_main_menu" >
         </activity>
         <activity
-            android:name=".BatchMenuActivity"
+            android:name="com.edwise.dedicamns.BatchMenuActivity"
             android:label="@string/title_activity_batch_menu" >
+        </activity>
+        <activity
+            android:name="com.edwise.dedicamns.AboutActivity"
+            android:label="@string/title_activity_about" >
         </activity>
     </application>
 
