--- a/dedicaMNS/AndroidManifest.xml
+++ b/dedicaMNS/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.edwise.dedicamns"
     android:versionCode="1"
-    android:versionName="0.9.1" >
+    android:versionName="0.9.2" >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -43,6 +43,10 @@
         <activity
             android:name="com.edwise.dedicamns.AboutActivity"
             android:label="@string/title_activity_about" >
+        </activity>
+        <activity
+            android:name="com.edwise.dedicamns.GeneralDetailDayActivity"
+            android:label="@string/title_activity_general_detail_day" >
         </activity>
     </application>
 
