- Añadida funcionalidad de consulta de Informe mensual, con un nuevo botón en el listado mensual. -  Solucionada Issue #10: Al cambiar orientación en el listado mensual, después de haber elegido otro mes, mostraba siempre el mes actual.

--- a/dedicaMNS/AndroidManifest.xml
+++ b/dedicaMNS/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:name="com.edwise.dedicamns.GeneralDetailDayActivity"
             android:label="@string/title_activity_general_detail_day" >
         </activity>
+        <activity
+            android:name="com.edwise.dedicamns.MonthReportActivity"
+            android:label="@string/title_activity_month_report" >
+        </activity>
     </application>
 
 </manifest>
