--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="D:/WorkingFolder/gitProyects/DedicaMNS/dedicaMNS/libs/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="D:/WorkingFolder/gitProyects/DedicaMNS/dedicaMNS/libs/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="D:/WorkingFolder/gitProyects/DedicaMNS/dedicaMNS/libs/jsoup-1.6.2.jar"/>
-	<classpathentry kind="lib" path="D:/WorkingFolder/gitProyects/DedicaMNS/dedicaMNS/libs/ntlm-android.jar"/>
+	<classpathentry kind="lib" path="C:/workingFolder/proyectos/DedicaMNS/libs/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/workingFolder/proyectos/DedicaMNS/libs/commons-lang3-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/workingFolder/proyectos/DedicaMNS/libs/jsoup-1.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/workingFolder/proyectos/DedicaMNS/libs/ntlm-android.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
